Fixed font size issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 
   h1 {
     color: #fff;
-    font: 120px "Open Sans", sans-serif;
+    font: 90px "Open Sans", sans-serif;
     font-weight: 700;
   }
 
